--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 upload_speed = 921600
 lib_ldf_mode = deep+
+extra_scripts = download_fs.py
 
 [common_cyd]
 lib_deps = 
